[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/models/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/models/main character/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/models/Interruptor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/models/Platform.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/models/Floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/models/level objects/turret.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/tiles/1bitpack_kenney_1.1/Tilesheet/colored.png" type="Texture" id=7]
[ext_resource path="res://scenes/models/TransportVehicle.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/models/level objects/wall_peaks.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/levels/Level3.gd" type="Script" id=10]
[ext_resource path="res://scenes/models/Lava.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/menu/Fin.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/models/level objects/muro invisible.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/models/level objects/Chaser.tscn" type="PackedScene" id=14]

[sub_resource type="TileSet" id=1]
0/name = "colored.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 352, 96, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "colored.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 208, 304, 16, 16 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [  ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Level3" type="Node2D"]
pause_mode = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_horizontal_guides_": [ 1376.94 ],
"_edit_vertical_guides_": [ 1709.13 ]
}

[node name="floor" type="Node2D" parent="."]

[node name="Floor" parent="floor" instance=ExtResource( 5 )]
position = Vector2( 1605.92, 1135.24 )
scale = Vector2( 1.5, 1.5 )

[node name="Floor3" parent="floor" instance=ExtResource( 5 )]
position = Vector2( -35.3802, 112.391 )
scale = Vector2( 1.5, 1.5 )

[node name="Floor4" parent="floor" instance=ExtResource( 5 )]
position = Vector2( 1378.18, 508.209 )
scale = Vector2( 1.5, 1.5 )

[node name="Floor5" parent="floor" instance=ExtResource( 5 )]
position = Vector2( 1404.46, 840.047 )
scale = Vector2( 1.5, 1.5 )

[node name="Floor8" parent="floor" instance=ExtResource( 5 )]
position = Vector2( 1356.58, 840.047 )
scale = Vector2( 1.5, 1.5 )

[node name="Floor7" parent="floor" instance=ExtResource( 5 )]
position = Vector2( 1333.87, 1134.92 )
scale = Vector2( 2, 1.5 )

[node name="Floor6" parent="floor" instance=ExtResource( 5 )]
position = Vector2( 1435.27, 1135.13 )
scale = Vector2( 1.5, 1.5 )

[node name="Player" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 35.6606, 57.7242 )

[node name="Camera2D2" type="Camera2D" parent="Player"]
offset = Vector2( 0, -100 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1700
limit_bottom = 1500
smoothing_speed = 3.0

[node name="chasers" type="Node2D" parent="."]

[node name="Chaser" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 181.668, 394.84 )

[node name="Chaser2" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 474.266, 398.647 )

[node name="Chaser3" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 676.081, 153.893 )

[node name="Chaser4" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 1079.71, 131.18 )

[node name="Chaser5" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 1140.26, 395.284 )

[node name="Chaser6" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 589.629, 610.135 )

[node name="Chaser7" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 827.987, 606.771 )

[node name="Chaser8" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 489.522, 969.567 )

[node name="Chaser9" parent="chasers" instance=ExtResource( 14 )]
position = Vector2( 975.716, 960.21 )

[node name="plataformas" type="Node2D" parent="."]
pause_mode = 1

[node name="Platform3" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 1157.05, 818.711 )
SPEED = -12000
playFallingAnimation = false

[node name="Platform5" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 322.245, 819.997 )
SPEED = -12000
playFallingAnimation = false

[node name="Platform6" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 741.815, 809.895 )
SPEED = -12000
playFallingAnimation = false

[node name="Platform4" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 139.271, 365.887 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform14" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 277.862, 365.887 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform15" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 416.454, 365.887 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform16" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 550.005, 365.887 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform17" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 786.87, 365.887 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform18" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 925.462, 365.887 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform19" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 1064.05, 365.887 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform20" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 1197.6, 365.887 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform2" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 1559.89, 513.781 )
SPEED = 20000
playFallingAnimation = false

[node name="Platform7" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 87.1978, 864.583 )
SPEED = 20000
playFallingAnimation = false

[node name="Platform11" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 468.001, 1153.1 )
SPEED = 18000
playFallingAnimation = false

[node name="Platform13" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 603.612, 1153.1 )
SPEED = 18000
playFallingAnimation = false

[node name="Platform21" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 743.461, 1153.1 )
SPEED = 18000
playFallingAnimation = false

[node name="Platform8" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 230.937, 1241.37 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform10" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 1006.14, 1232.03 )
SPEED = -10000
playFallingAnimation = false

[node name="Platform12" parent="plataformas" instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 1149.98, 1142.13 )
SPEED = -10000
playFallingAnimation = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 25, 25 )
format = 1

[node name="Torretas" type="Node2D" parent="."]

[node name="Turret" parent="Torretas" instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 280.214, 14.6378 )
rotation = 2.7994

[node name="Turret6" parent="Torretas" instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 263.39, 953.045 )
rotation = 3.20254

[node name="Turret7" parent="Torretas" instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 1215.53, 950.334 )
rotation = 3.2607

[node name="Turret2" parent="Torretas" instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 529.102, 14.6378 )
rotation = 3.45685

[node name="Turret3" parent="Torretas" instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 913.347, 14.6378 )
rotation = 2.80843

[node name="Turret4" parent="Torretas" instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 1115.62, 14.6378 )
rotation = 3.43072

[node name="Muros" type="Node" parent="."]

[node name="wall_peaks17" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 670.4, 268.937 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks25" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1333.96, 595 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks28" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1333.96, 684.516 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks26" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 941.101, 768.018 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks50" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 866.331, 1186.58 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks51" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 523.94, 1143.72 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks27" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 554.227, 768.388 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks39" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 670.306, 929.907 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )

[node name="wall_peaks40" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 750.396, 929.907 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )

[node name="wall_peaks41" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1180.21, 931.241 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )

[node name="wall_peaks42" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1260.3, 931.241 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )

[node name="wall_peaks43" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 224.469, 928.572 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )

[node name="wall_peaks44" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 304.56, 928.572 )
rotation = 1.5708
scale = Vector2( 1.5, 1 )

[node name="wall_peaks19" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1361.04, 350.553 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks20" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1361.04, 224.074 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks21" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1361.04, 97.5946 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks24" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1361.04, 42.1581 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="wall_peaks" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 164.816, 505.421 )
scale = Vector2( 5, 2 )

[node name="wall_peaks4" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 482.675, 505.421 )
scale = Vector2( 5, 2 )

[node name="wall_peaks6" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 801.374, 505.421 )
scale = Vector2( 5, 2 )

[node name="wall_peaks9" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1121.76, 505.421 )
scale = Vector2( 5, 2 )

[node name="wall_peaks35" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 311.465, 881.178 )
scale = Vector2( 5, 2 )

[node name="wall_peaks36" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 629.324, 881.178 )
scale = Vector2( 5, 2 )

[node name="wall_peaks37" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 948.024, 881.178 )
scale = Vector2( 5, 2 )

[node name="wall_peaks38" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1268.4, 881.178 )
scale = Vector2( 5, 2 )

[node name="wall_peaks29" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1436.74, 1028.49 )
scale = Vector2( 5, 2 )

[node name="wall_peaks52" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1466.04, 881.038 )
scale = Vector2( 5, 2 )

[node name="wall_peaks30" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1545.28, 1028.49 )
scale = Vector2( 5, 2 )

[node name="wall_peaks12" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 163.247, -19.9465 )
scale = Vector2( 5, 2 )

[node name="wall_peaks16" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 481.106, -19.9465 )
scale = Vector2( 5, 2 )

[node name="wall_peaks22" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 799.806, -19.9465 )
scale = Vector2( 5, 2 )

[node name="wall_peaks23" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1120.19, -19.9465 )
scale = Vector2( 5, 2 )

[node name="wall_peaks31" parent="Muros" instance=ExtResource( 9 )]
position = Vector2( 1190.75, -19.9465 )
scale = Vector2( 5, 2 )

[node name="muro invisible" parent="Muros" instance=ExtResource( 13 )]

[node name="muro invisible2" parent="Muros" instance=ExtResource( 13 )]
position = Vector2( -5.03265, 804.709 )

[node name="muro invisible3" parent="Muros" instance=ExtResource( 13 )]
position = Vector2( -5.03265, 1003.16 )

[node name="muro invisible4" parent="Muros" instance=ExtResource( 13 )]
position = Vector2( 1712.18, 273.022 )

[node name="muro invisible5" parent="Muros" instance=ExtResource( 13 )]
position = Vector2( 1712.18, 804.709 )

[node name="muro invisible6" parent="Muros" instance=ExtResource( 13 )]
position = Vector2( 1712.18, 1003.16 )

[node name="TransporterVehicle" parent="." instance=ExtResource( 8 )]
position = Vector2( 1654.62, 1097.66 )
scale = Vector2( 3, 3 )
next_scene = ExtResource( 12 )

[node name="doors" type="Node2D" parent="."]

[node name="DoorFinal" parent="doors" instance=ExtResource( 1 )]
position = Vector2( 1211.81, 1047.06 )
scale = Vector2( 3, 4 )

[node name="Interruptor" parent="doors" instance=ExtResource( 3 )]
position = Vector2( 678.15, 18.9177 )
scale = Vector2( 1.5, 1.5 )

[node name="Interruptor2" parent="doors" instance=ExtResource( 3 )]
position = Vector2( 1398.28, 557.079 )
scale = Vector2( 1.5, 1.5 )

[node name="Interruptor3" parent="doors" instance=ExtResource( 3 )]
position = Vector2( 705.246, 922.892 )
scale = Vector2( 1.5, 1.5 )

[node name="Door1" parent="doors" instance=ExtResource( 1 )]
position = Vector2( 1281.36, 420.83 )
scale = Vector2( 3, 4 )

[node name="Door6" parent="doors" instance=ExtResource( 1 )]
position = Vector2( 1255.39, 751.826 )
scale = Vector2( 3, 4 )

[node name="lava" type="Node2D" parent="."]

[node name="Lava9" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 81.3784, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava18" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 236.944, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava19" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 395.684, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava20" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 551.249, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava21" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 709.989, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava22" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 865.555, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava23" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 1022.71, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava24" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 1178.27, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava25" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 1333.84, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava26" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 1489.4, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava27" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 1640.21, 1293.36 )
scale = Vector2( 9, 13 )

[node name="Lava10" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 804.047, 862.608 )
scale = Vector2( 9, 13 )

[node name="Lava14" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 644.948, 863.315 )
scale = Vector2( 9, 13 )

[node name="Lava15" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 487.263, 864.022 )
scale = Vector2( 9, 13 )

[node name="Lava16" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 325.336, 864.022 )
scale = Vector2( 9, 13 )

[node name="Lava17" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 229.876, 865.436 )
scale = Vector2( 9, 13 )

[node name="Lava11" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 946.883, 862.608 )
scale = Vector2( 9, 13 )

[node name="Lava12" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 1103.86, 861.901 )
scale = Vector2( 9, 13 )

[node name="Lava13" parent="lava" instance=ExtResource( 11 )]
position = Vector2( 1263.66, 861.901 )
scale = Vector2( 9, 13 )
